tests/paczka1/fuzzy1/98189588.err
Error in line 3: S439 S524 4,4
Error in line 6: IQp5 S524 97,1
Error in line 7: 0znBI A902 92,8
Error in line 17: 3O7q6p6 S524 2,4
Error in line 25: s5EYRbiRE S439 -1,8
Error in line 26: IQp5 S439 21,2
Error in line 13: S439 A902 91,1
Error in line 11: s5EYRbiRE S439 8,1
Error in line 36: s5EYRbiRE A954 19,7
